--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -159,10 +159,11 @@ Single drops with a volume of 100 nL are deployed on the sawn and milled surface
 
 \bigskip
 
-Analyzing the collected measurements, it can be concluded that a 60\textdegree \space C increase of the zirconia plate leads to about 50\% reduction of the absorption time. These values are to be employed for a curve fitting to be implemented to the shade model at the final stage of the thesis.
+Analyzing the collected measurements, it can be concluded that a 60\textdegree \space C increase of the zirconia plate leads to about 50\% decline of the absorption time. Thus the printing time also gets reduced to half of the duration it would take under room temperature.
  
 \section{Drop Size Selection}
-The purpose of the third experiment is deciding for an adequate drop size.A larger drop size results in shorter print duration. However they also tend to expand the spot area more compared to the smaller drops,even though the porous material is not close to being saturated, which is a serious problem for the resolution. Depending on the drop size the drop generation method is to be selected. 
+The purpose of the third experiment is deciding for an adequate drop size. A larger drop size results in shorter print duration. However they also tend to expand the spot area more compared to the smaller drops, even though the porous material is not close to being saturated, which is a serious problem for the resolution. Depending on the drop size, the drop generation method is to be selected.
+ 
 \bigskip
 \begin{figure}[H]
 	\centering
@@ -171,6 +172,7 @@ The purpose of the third experiment is deciding for an adequate drop size.A larg
 	\label{fig:DropSize}
 \end{figure} 
 \bigskip
+
 In the figure \ref{fig:DropSize} one can see a printed zirconia specimen. Each spot on the upper half has a total ink volume of 800 nL and the ones on the bottom half 400 nL. These spots are printed using drops with volumes of 100, 50, 25 and 12.5 nL.The first image shows the spots right after printing. The second one shows the surface after furnacing.
 
 \bigskip
@@ -184,12 +186,13 @@ In the figure \ref{fig:DropSize} one can see a printed zirconia specimen. Each s
 
 \bigskip
 
-The graphs show the ink intensity along the red lines and the spreading of the ink in lateral direction for each drop volume. 12.5 and 25 nL drops result in a similar spot diameter but the spots tend to get significantly larger with 50 and 100 nL Drops.
+The graphs show the ink intensity along the red lines and the spreading of the ink in lateral direction for each drop volume. 12.5 and 25 nL drops result in a similar spot diameter but the spots tend to get significantly larger with 50 and 100 nL Drops. Depending on these results 25nL can be selected as the optimum drop size for further experiments. However, considering to repeat some key procedures for the drop size of 50 nL can also be advantageous to gather further information.
 
 \section{Proximity}
-The proximity effect describes in the case of dental printing the coloring of the unprinted area between two printed areas proximate to each other. The closer the printed areas are, the saturated does the unprinted area in between become.
 
-If the color change of the unprinted area can be described depending on the ink concentration and distance between the printed areas, the effect of the proximity can be implemented to the model.
+The proximity effect describes in the case of dental printing the coloring of the unprinted area between two printed areas proximate to each other. The closer the printed areas are, the saturated becomes the unprinted area in between.
+
+If the color change of the unprinted area can be described depending on the ink concentration and distance between the printed areas, the effect of the proximity can be implemented to the model. During this experiment an exception is made and for the printing process a drop size of 12.5 nL is chosen. This is the smallest volume the printing system can generate stably, without spraying the ink in a circle or generating satellite droplets. The reason for selecting the smallest possible droplet volume is to rule out or at least minimize the lateral flow of the ink caused by the initial wetting area.  
 
 \bigskip
 
@@ -202,7 +205,9 @@ If the color change of the unprinted area can be described depending on the ink 
 
 \bigskip
 
-A pattern with varying distance between two lines and another pattern with varying droplet concentration were printed on the zirconia. The blue lines mark the initially printed surface portion before without taking the diffusion in the material into account. The pattern on the left size presents two lines starting on the same coordinates and reaching a distance of 5 mm at right end. The ink trace has a concentration of 1250 nl/mm. The pattern on the right size presents two lines with a distance of 5mm to each other. On the left end of the lines, the ink intensity is 625 nl/mm at  the left end and reaches linearly 2500 nl/mm towards the right end of the pattern in 30 incremental steps.
+A pattern with varying distance between two lines and another pattern with varying droplet concentration were printed on the zirconia. The blue lines mark the initially printed surface portion before the sintering process, without taking the diffusion of the ink in the material into account. The dental ink is not easily recognizable by the naked eye before the sintering process, but it can diffuse far into the zirconia. The the blue ink is added to the dental ink bottle to make the printed area recognizable. However, The blue ink cannot infiltrate the zirconia as good as the dental ink and gets filtered, gathering mostly on the initial contact area. If the Figure \ref{fig:proximityprint} is observed closely, one can recognize a slightly darker trace around the blue lines in comparison to the natural whiteness of the zirconia surface. The darker regions are infiltrated by the dental ink and seem to have a definite border. However, the sharp transition from the infiltrated to dry cannot be withhold for after the sintering process.
+
+The pattern on the left size presents two lines starting on the same coordinates and reaching a distance of 5 mm at right end. The ink trace has a constant concentration of 1250 nl/mm. The pattern on the right side presents two lines with a constant distance of 5mm to each other. On the left end of the lines, the ink intensity is 625 nl/mm and reaches linearly 2500 nl/mm towards the right end of the pattern in 30 incremental steps.
 
 \bigskip
 
@@ -217,7 +222,9 @@ A pattern with varying distance between two lines and another pattern with varyi
 
 Observing the Figure \ref{fig:prepostV}, one can qualitatively conclude, that the proximity has a significant effect on the coloring behavior. More than a half of the pattern seems to be one thick line on the left side of the postsintering graph in contrary to the lines recognized in the presintering analysis graph. 
 
-The second pattern with the varying ink intensity contains a flaw. The lower line is weaker in the middle because of a contamination with finger oil, which happened before the printing process. Nevertheless, the experiment was proceeded in order to observe, how seriously the printing process is affected by a slight finger oil contamination. The result shows a serious fluctuation in the acquired color which is as high as two shades. However, the purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern (magenta line in the Figure \ref{fig:vmatch}), should be the same with the ink distribution along the red line on the second pattern in the Figure \ref{fig:vmatch}) where the ink intensity is 1250 nl/mm. If the results comply with each other, the optimum trace distance for any ink intensity can be calculated.
+The second pattern with the varying ink intensity contains a flaw. The lower line is weaker in the middle because of a contamination with finger oil, which happened before the printing process. Nevertheless, the experiment was proceeded in order to observe, how seriously the printing process is affected by a slight finger oil contamination. The result shows a serious fluctuation in the acquired color which is as high as two shades. 
+
+
 
 \bigskip
 
@@ -230,7 +237,7 @@ The second pattern with the varying ink intensity contains a flaw. The lower lin
 
 \bigskip
 
-
+The purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern, magenta line in the Figure \ref{fig:vmatch}, should be the same with the ink distribution along the red line on the second pattern in the Figure \ref{fig:vmatch} where the printing ink intensity is 1250 nl/mm. If the results would comply with each other, the optimum trace distance for any ink intensity could be calculated. However, the effect of the lateral diffusion was underestimated at time of planning the concept, which resulted with a divergent result that can be observed in the lower graph in the Figure	\ref{fig:vmatch}. The ink diffusing from the higher intensity regions on the right side increase the intensity of the regions on the left side, so that the color intensity distributed over the red line does not belong to the printing intensity of 1250 nL/mm.
 
 \bigskip
 
@@ -245,14 +252,14 @@ The second pattern with the varying ink intensity contains a flaw. The lower lin
 
 The plots to analyze the ink distribution are presented separately in two columns in the Figure \ref{fig:vProfile}. The column on the left side presents 8 equidistant positions on the varying distance pattern which are marked with eight red vertical lines and the right column contains the cross section of the pattern on the right side with varying ink intensities. The pattern on the left shows that a necking appears already with a distance of 3 mm when the printing intensity is equal to 1250 nl/mm. In other words, printing with a trace distance higher than 3 mm result with an unwanted brighter stripe in the middle of printing traces. Whereas, a trace distance lower than 3mm cannot result with a more saturated color but a higher diffusion range or a thicker single line. 
 
-This data acquired from the first pattern was planned to be matched with the data from the section with the ink intensity of 1250 nl/mm on the second pattern but the extreme irregularity levels of diffusion in the x direction make the data acquired from the second pattern quite useless. The lateral diffusion amount on the right side of the second pattern is definitely higher than the left side as observed in the lower plots of the Figure \ref{fig:vmatch}. Not to mention a direct match and acquisition approach, it is even not possible to calibrate the data on the second pattern to conduct trace distance calculations, because of the nonlinear lateral ink distribution inside the material.
+The data acquired from the first pattern was planned to be matched with the data from the section with the ink intensity of 1250 nl/mm on the second pattern but the extreme irregularity levels of diffusion in the x direction make the data acquired from the second pattern quite useless. Not to mention a direct match and acquisition approach, it is even not possible to calibrate the data on the second pattern to conduct trace distance calculations, because of the nonlinear lateral ink distribution inside the material along the second pattern. 
 
 
 
 \section{Printing Angle}
-The dental crowns do not always present convex features. The chewing surface can rarely possess even some under cut geometries. In such cases it is not possible for a droplet to land on the zirconia surface vertically and for some known areas, the printing process has to be conducted on skew surfaces. 
+The dental crowns do not always present convex features. The chewing surface can rarely possess even some undercut geometries. In such cases, it is not possible for a droplet to land on the zirconia surface vertically and for some known areas, the printing process has to be conducted on skew surfaces. 
 
-If the lateral momentum of the droplet are high enough at moment of the impact on the surface, the printed pattern can look like it has a motion blur effect. It is also possible that the resolution gets lower because of the lateral flow of the drops on the surface. There has to be some critical angle, at which such disadvantages become inevitably  significant. The maximum milling angle used for the dental crowns is declared by Bredent GmbH to be 30\textdegree \space. So, an experiment to test the effects of printing on a skew surface up to an angle of 45\textdegree \space is supposed to be comprehensive enough.
+If the lateral momentum of the droplets are high enough at the moment of the impact on the surface, the printed pattern can look like it has a motion blur effect. It is also possible that the resolution gets lower because of the lateral flow of the drops on the surface. There has to be some critical angle at which such disadvantages become inevitably  significant. The maximum milling angle used for the dental crowns is declared by Bredent GmbH to be 30\textdegree \space. So, an experiment to test the effects of printing on a skew surface up to an angle of 45\textdegree \space is supposed to be comprehensive enough.
 
 	\bigskip
 
@@ -265,13 +272,13 @@ If the lateral momentum of the droplet are high enough at moment of the impact o
 
 	\bigskip
 
-In order to test the effect of printing on a skew surface to parallel lines are printed on the surface which have a distance of 4mm 4 times, while the zirconia specimen was standing at angles 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space. The printed sample can be seen in the Figure \ref{fig:angleprint}. 30\textdegree \space is defined by the dental techologists from the Bredent GmbH. as the highest possible printing angle that could be required because of the parameters of the milling process. The maximum milling angle for the inner features of the crown is realized by a CNC with a machine tool angle of 30\textdegree \space to the crown axis. So the extension of the experiments up to a printing angle of 45\textdegree \space is slightly off the limits but necessary to be on the safe side.
+In order to test the effect of printing on a skew surface two parallel lines are printed on the surface which have a distance of 4 mm. This process is repeated 4 times, while the zirconia specimen was standing at angles 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space. The printed sample can be seen in the Figure \ref{fig:angleprint}. The highest possible printing angle that could be required is defined by the dental technologists from the Bredent GmbH to be 30\textdegree \space because of the traditional parameters of the milling process. The maximum milling angle for the inner features of the crown is realized by a CNC with a machine tool angle of 30\textdegree \space to the crown axis. So the extension of the experiments up to a printing angle of 45\textdegree \space is slightly off the limits but necessary to be on the safe side.
 
-The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. This measurement of 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the line after the sintering process. The consistency of the thickness at all angles is enough for the observer to conclude the result that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the the wetted surface on the zirconia is the same for all printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
+The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. The measurements of the thicknesses as 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the lines after the sintering process. The consistency of the thicknesses at all angles is enough for the observer to draw the conclusion that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the wetted surface on the zirconia is the same for all of the printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
 
 \section{Singular Spot Characteristics}
 
-Since the efforts to determine the characteristics via continuous lines did not provide conclusive results because of the ink diffusion in side the porous material, discontinuous, isolated imprints are required as a further experiment. 8 Spots are to be printed with an equidistant placement. The distances between the spots are 8 mm which is beyond the diffusion range of the relative ink amounts. 25 nL drops and 50 nL drops are deployed on two different specimen to observe the effect of the droplet size depending on the total ink volume. 
+Since the efforts to determine the characteristics via continuous lines did not provide conclusive results because of the ink diffusion inside the porous material, discontinuous, isolated imprints are required as a further experiment. 8 Spots are to be printed with an equidistant placement. The distances between the spots are 8 mm which is beyond the diffusion range of the relative ink amounts. 25 nL drops and 50 nL drops are deployed on two different specimen to observe the effect of the droplet size depending on the total ink volume. 
 
 The drops are expected to have a high color intensity in the middle. That middle point is going to be the center of the Gaussian distribution. The points with an equal distance from the middle are supposed to present a point symmetrically identical color intensity.
 
@@ -280,7 +287,7 @@ The drops are expected to have a high color intensity in the middle. That middle
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{grafiken/psfprint.jpg}
-	\caption{Comparison of the spot area results depending on the drop size}
+	\caption{Comparison of the spot areas depending on the drop size and total ink amount}
 	\label{fig:psfprint}
 \end{figure} 
 
@@ -289,14 +296,16 @@ The drops are expected to have a high color intensity in the middle. That middle
 The Figure \ref{fig:psfprint} presents both of the printed zirconia plates before the sintering process combined with additional tables to sort the properties of each printed spot in a well defined manner. 
 
 In order to inspect the Gaussian distributions of the ink intensities in cases of different total ink amounts and different drop sizes 8 spots are printed using drops with volumes of 25 nL and 50 nL. The total ink volumes for the spots on each plate are identical and equal to 200 nL, 400 nL, 800 nL, 1200 nL, 1600 nL, 2000 nL, 2400 nL and 2800 nL.
-
+\begin{comment}
 The results of this experiment are necessary for the reverse calculation of the required ink amount. Depending on the calculations a map can be generated for the amount of drops and target positions to deploy these drop, in order to acquire a desired shade distribution as an outcome.  
+\end{comment}
+The lack of a color sampling device for shade measurement, channeled the color determination process to a software solution. The images captured with a standard camera are edited via MATLAB to acquire data about the color intensities. After the sintering process, the plates were laid on a homogeneous light source with a constant output level of 570 nits. The color distribution observed on the front side of the plates was captured using a high resolution camera. The captured image is processed utilizing the image processing toolbox of MATLAB. What important was, that the colors were not drifted out of scale during the editing processes which would make all of the results useless for further calculations. In order to increase the global contrast, histogram equalization is conducted. The working principle of the histogram equalization process is similar to apllication of a band pass filter after an analysis is made with the Fourier transform. The intensities of different wavelengths in the image are analyzed. The interesting part of the wavelength spectrum is cropped and distributed over the whole visible spectrum conducting a linear scaling. This process makes it easier to distinguish between the slightest color changes. Then the image is converted from an RGB image to a gray scale one, since the intensities of the 3 colors are not individually relevant to the purpose of the experiment. 
 
-The lack of specific color sampling devices, channeled the color determination process to a software solution. After the sintering process, the plates were laid on a homogeneous light source with a constant output level of 570 nits. The color distribution observed on the front side of the plates was captured using a high resolution camera. The captured image is processed utilizing the image processing toolbox of MATLAB. What important was, that the colors were not drifted out of scale during the editing processes which would make all of the results useless for further calculations. In order to increase the global contrast histogram equalization is conducted. It works like Fourier transform. The intensities of different wavelengths in the image are analyzed. The interesting part of the wavelength spectrum is cropped and distributed over the whole visible spectrum via linear scaling. This process makes it easier to distinguish between the slightest color changes. Then the image is converted from an RGB image to a gray scale one, since the intensities of the 3 colors are not individually relevant to the purpose of the experiment. 
+After this point, the darkness of each pixel presents its color intensity. Since the image contains a region which is printed beyond the maximum saturation level, a small pixel region with the highest intensity can be used for calibrations purposes as a dental shade of A3.5. The calibration shade is A3.5, because at the time of the development processes A3.5 is the most saturated shade provided by the research partner. Calibrating the other end of the spectrum for the lowest intensity is not such a straightforward calculation. Each line of the image actually has a slight different illumination because of the irregularities on the edges of the zirconia plate or even some defects on the  plate like curved surfaces due to sintering process or broken regions.
 
-After this point, the darkness of each pixel presents its color intensity. Since the image contains a region which is printed beyond the maximum saturation level, the pixel with the highest intensity can be used for calibrations purposes as a dental shade of A3.5. Calibrating the other end of the spectrum for the lowest intensity is not such a straightforward calculation. Each line of the image actually has a slight different illumination because of the irregularities on the edges of the zirconia plate or even some defects on the  plate like curved surfaces due to sintering process or broken regions.
+One example to such defects can be observed in the Figure \ref{fig:drops25} on the false colored intensity image positioned on the left side. Just below the second spot from the top are lots of pixels contaminated with intensity noise. The reason for that is a crack in the plate, along the x-axis, at the position y=49 mm. Since the wall of the plate at breaking line is not parallel to the XZ-Plane and does not have planar surface, the light guided into the material is not homogeneous either. 
 
-One example to such defects can be observed in the Figure \ref{fig:drops25} on the false colored intensity image positioned on the left side. Just below the second spot from the top are lots of pixels contaminated with intensity noise. The reason for that is a crack in the plate, along the x-axis, at the position y=49. Since the wall of the plate at breaking line is not parallel to the XZ-Plane and does not have planar surface, the light guided into the material is not homogeneous either. 
+The calibration of the lowest intensity is made because of the mentioned reason separately for each line of the zirconia image. At each level it is known that the regions close to the edges of the zirconia plate contain no coloring agent. Edges of the plate are also illuminated with different intensities in comparison to the continuous regions in the middle. Thus, the minimum intensity value is obtained cutting out the regions close to the material border and taking  the minimum intensity as a reference point for the shade A0.
 \bigskip
 
 \begin{figure}[H]
@@ -308,11 +317,11 @@ One example to such defects can be observed in the Figure \ref{fig:drops25} on t
 
 \bigskip 
 
-Due to the strange characteristics of the porous zirconia medium, a proportional intensity change cannot be observed along increasing total ink amounts. As a reminder, it should be said that the printing process is realized using an ink with a calibrated shade of A3.5. This means if the zirconia plate is sunk into the ink completely and hold in the ink for at least 10 seconds so that there is relatively no air left in the porous medium, the end color shade of the zirconia would be an A3.5. This global void filling condition can also be fulfilled locally with some unintentional lateral diffusion occurrence. 
+Due to the nonlinear printing characteristics of the porous zirconia medium, a proportional intensity change cannot be observed along increasing total ink amounts. As a reminder, it should be said that the printing process is realized using an ink with a calibrated shade of A3.5. This means if the zirconia plate is sunk into the ink completely and hold in the ink for at least 10 seconds so that there is relatively no air left in the porous medium, the end color shade of the zirconia would be an A3.5. This global void filling condition can also be fulfilled locally with the inevitable occurrence of some lateral diffusion. 
 
-There are two parameters one should pay attention to on the plots positioned on the right side of the Figure \ref{fig:drops25}. One of them is the shade the other one is the Full Width Half Maximum (FWHM) measurement of the spots. Each plot belongs to the line on the false colored image, on the same height with the plot. The applied amount of ink on the first spot is 200 nL. Even though the plot has a global maximum around A1.75, the results are not trustworthy, because of the noise level on the line. The areas close to the edges reach easily 50\% of the global maximum which is a sign of high noise and is caused by extremely low amount of ink applied. 
+There are two parameters one should pay attention to on the plots positioned on the right side of the Figure \ref{fig:drops25}. One of them is the shade, the other one is the Full Width Half Maximum (FWHM) measurement of the spots. Each plot belongs to the line on the false colored image, on the same height with the plot. The applied amount of ink on the first spot is 200 nL. Even though the plot has a global maximum around A1.75, the results are not trustworthy, because of the noise level on the line. The areas close to the edges reach easily 50\% of the global maximum which is a sign of low signal to noise ratio and is caused by extremely low amount of the applied ink. 
 
-The spots with total ink amounts of 1600 nL and 2000 nL present the same FWHM value which is equal to 3.5mm. The 1600 nL total ink amount brings the graph just below the shade A3.5, but the total ink amount 2000 nL reaches the shade A3.5 with a constant level plateau. This means 2000 nL is the critical value for full saturation under lateral diffusion conditions. A higher amount of ink causes only a proportionally larger FWHM. For 25nL Drops it can be said that different shades can be obtained using an ink with the shade A4.0 and a brightener with a total amount of 2000 nL on each spot.
+The spots with total ink amounts of 1600 nL and 2000 nL present the same FWHM value which is equal to 3.5 mm. The 1600 nL total ink amount brings the graph just below the shade A3.5, but the total ink amount 2000 nL reaches the shade A3.5 with a constant level plateau. This means 2000 nL is the critical value for full saturation under lateral diffusion conditions. A higher amount of ink causes only a proportionally larger FWHM. For 25nL Drops it can be said that different shades can be obtained using an ink with the shade A4.0 and a brightener with a total amount of 2000 nL on each spot.
 
 \bigskip
 
@@ -324,10 +333,10 @@ The spots with total ink amounts of 1600 nL and 2000 nL present the same FWHM va
 \end{figure} 
 
 \bigskip 
- The same experiment is repeated for the drop size of 50 nL with the half amount of drops to achieve the same total ink amount. The only practical difference between the experiments is the diameter of the first contact circle. When the first wetting area is larger the ink tries to impregnate the zirconia through a larger area which means the lateral diffusion is supposed to be complete quite sooner and the FWHM diameters are to be slightly larger than the ones belonging to the 25 nL droplets. It is hard to conduct a comparative evaluation for the first four spots from the top because of the high noise generated by the crack in the first specimen. 
+ The same experiment is repeated for the drop size of 50 nL with the half amount of drops to achieve the same total ink amount. The only practical difference between the experiments is the diameter of the first contact circle. When the first wetting area is larger the ink tries to impregnate the zirconia through a larger area which means that the lateral diffusion is supposed to happen easier and the FWHM diameters are to be slightly larger than the ones belonging to the 25 nL droplets depending on the Equation \ref{eq:SpreadingDia} . It is hard to conduct a comparative evaluation for the first four spots from the top because of the high noise generated by the crack in the first specimen. 
  
- The spot created with 1600 nL ink has a lower shade level in comparison because of the higher ability of the ink to diffuse. If the initial contact area is larger, the ink is transfered beneath this larger area into the zirconia material. After the impregnation the diffusion can happen beginning from a comparatively larger area which means that the ink can reach a larger area. Since the ink supposed to be in the middle of the printed spot is distributed more to the outer circles, the intensity of the 1600 nL spot is lower for 50 nL drops in comparison to 25 nL ones.
+ The spot created with 1600 nL ink has a lower shade level in comparison because of the higher diffusion distance of the ink caused by the larger initial contact. If the initial contact area is larger, the ink is transfered beneath this larger area into the zirconia material. After the impregnation the diffusion can happen beginning from a comparatively larger area which means that the ink can reach further away, but with less intensity. Since the ink is distributed more to the outer circles, the intensity of the 1600 nL spot is lower for 50 nL drops in comparison to 25 nL ones.
   
- The total ink amount of 2000 nL is again enough for the full saturation of the pores with the ink. The predefined shade of A3.5 is reached with a large plateau as a sign for the saturated spot imprint with an FWHM of 3.2 mm. The FWHM values for the ink amounts 2000 nL, 2400nL and 2800 nL in the first experiment were, as it can be seen in Figure \ref{fig:drops25}, 3.5 mm, 4.2 mm and 4.4 mm. Those values are 3.9 mm, 4.2 mm and 4.4 mm in the second experiment. The fact that the last two diameters are exactly the same for both of the drop sizes shows that an amount of total ink this high is significantly over the saturation limit of the medium. 
+ The total ink amount of 2000 nL is again enough for the full saturation of the pores. The predefined shade of A3.5 is reached with a large plateau as a sign for the saturated spot imprint with an FWHM of 3.9 mm. The FWHM values for the ink amounts 2000 nL, 2400nL and 2800 nL in the first experiment were, as it can be seen in Figure \ref{fig:drops25}, 3.5 mm, 4.2 mm and 4.4 mm. Those values are 3.9 mm, 4.2 mm and 4.4 mm in the second experiment. The fact that the last two diameters are exactly the same for both of the drop sizes shows that an amount of total ink this high is significantly over the saturation limit of the spot area. 
  
- There is another important result one can conclude out of these two samples. If the printing process is done with a color shade of A4.0 and the target shade is A4.0 the whole void proportion of the material has  to be filled with the ink for the shade A4.0. Whether the drops have a volume of 25 nL or 50 nL doesn't change the fact that the material has to be filled up regionally and this will cause inevitable  lateral diffusions. Thus it is not quite likely to obtain A4.0 spots as tiny as A1.0 spots. Because in the upper plots of the Figures \ref{fig:drops25} and \ref{fig:drops50}it can be observed that the spots have shades below A1.75 and the FWHM values are less than or equal to the half of the saturated A4.0 generating spot diameters.
+ There is another important result one can conclude out of these two samples. If the printing process was done with a color shade of A4.0 and the target shade was A4.0 ,the whole void proportion of the material would have to be filled with the ink for the shade A4.0. Whether the drops have a volume of 25 nL or 50 nL doesn't change the fact that the material has to be filled up regionally and this will cause inevitable  lateral diffusions. Thus it is not quite likely to obtain A4.0 spots as tiny as A1.0 spots using an ink with a shade of A4.0. Because in the upper plots of the Figures \ref{fig:drops25} and \ref{fig:drops50}it can be observed that the spots have shades below A1.75 and the FWHM values are less than or equal to the half of the saturated A4.0 generating spot diameters.
